--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,20 @@
             margin: 0 0 20px;
         }
     }
+
+
+    .modal-content {
+        border-radius: 10px;
+        background-color: #ffffff;
+    }
+
+    .modal-body h4 {
+        font-weight: bold;
+        color: #333333;
+    }
+
+    .modal-body p {
+        color: #666666;
+        font-size: 16px;
+        line-height: 1.5;
+    }
